--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
    ========================================================================== */
 .content-wrapper {
   outline: 3px dotted red;
-  width: 90%;
+  
   
 }
 
@@ -66,7 +66,7 @@ footer .content-wrapper {
   margin: 50px 0;
 
 }
-/*----check on .contact-content can't find in HTML----*/
+
 footer .contact-content p { 
   margin: 0;
 }
@@ -93,6 +93,7 @@ footer .social-icons p {
 .hero-area {
   display: flex;
   justify-content: center;
+  width: 90%;
 }
 
 /* ASIDE */
@@ -100,6 +101,8 @@ footer .social-icons p {
 aside {
   display: flex;
   justify-content: center;
+  width: 90%;
+
 }
 
 /* features */
@@ -130,7 +133,11 @@ aside {
 .reviews {
   display: flex;
   justify-content: center;
+  width: 90%;
+}
 
+.reviews .content-wrapper {
+  width: 90%;
 }
 
 .reviews h3 {
