--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,8 @@
    ========================================================================== */
 .content-wrapper {
   outline: 3px dotted red;
+  width: 90%;
+  margin: 50px 0;
  }
 
 /*  Base Header - Footer Styles */
@@ -11,9 +13,6 @@
 header {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-  width: 90%;
   padding: 15px 0;
 }
 
@@ -22,33 +21,27 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  width: 95%;
   margin: 0;
-  padding: 15px 0 15px 0;
-}
-
-header .content-wrapper img {
-  margin: 0;
+ 
 }
 
 header .header-divider {
-  width: 90%;
-  height: 10px;
-  
-
+  width: 100%; 
+  height: 1px;  
+  margin: 10px 0 20px 0;  
 }
 
 header nav {
   width: 60%;
-  margin: 25px 0;
-  padding: 20px 0 15px 0;
+ /* margin: 25px 0;*/
+ /* padding: 20px 0 15px 0; */
  }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
-  width: 75%;
-  margin: 0;
+  width: 100%;
+  
 }
 
 header nav ul li {
@@ -58,37 +51,45 @@ header nav ul li {
   padding: 5px 10px 5px 10px;
 }
 
-footer {
+footer {   /*correct*/
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
 
 }
+/* leave off here*/
+footer p {
+  margin: 0;  /* correct in solution*/
+}
 
 footer .content-wrapper {
   width: 55%;
-  margin: 50px 0;
+/*  margin: 50px 0;*/
 
 }
 
-footer h4 { 
+footer .contact {   /* check to make sure this is in HTML*/
+  margin-bottom: 50px;
+
+}
+.contact-content h4 { 
   padding: 20px 0 20px 0;
   margin: 0;
 }
 
-footer p {
+.contact-content p {
   margin: 0;
   padding-bottom: 50px;
 }
 
-footer .social-icons {
+.social-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-footer .social-icons h4 {
+.social-icons h4 {
   justify-content: center;
   margin: 0;
   padding: 20px 0 20px 0;
@@ -98,13 +99,13 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 50px;
-  margin-bottom: 50px;
+  padding-bottom: 50px;  /* is this right? not in video*/
+  margin-bottom: 50px;  /* is this right? not in video*/
 }
 
 footer .copyright {
   margin: 0;
-  padding: 20px 0 20px 0;
+  padding: 20px 0;
 }
 
 /* --------------------Mobile Styles - Homepage -------------*/
@@ -143,10 +144,8 @@ aside {
 } 
  
 .features h2 {
-  margin: 0;
+  margin-bottom: 60px;
 }
-
-
 
 .features .feature-items {
   display: flex;
@@ -155,10 +154,15 @@ aside {
   flex-flow: row wrap;
 }
 
+.features p {
+  margin: 0;
+}
+
 .features article {
   width: 63%;
-
+  margin: 30px 0;
 }
+
 .features .feature-items-description {
   margin: 0;
 }
@@ -173,6 +177,10 @@ aside {
 
 .reviews .content-wrapper {
   width: 90%;
+}
+
+.reviews h2 {
+  margin: 0;  /*==just added margin 0 to fill something in===*/
 }
 
 .reviews h3 {
@@ -191,7 +199,9 @@ aside {
   justify-content: center;
 }
 
-
+.contact-content p {
+  margin: 0;
+}
 /*==========  FAQ page============*/
 
 .faq {
@@ -205,9 +215,17 @@ aside {
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
-  width: 90%;
+  width: 90%; /* not in video*/
+  margin: 50px 0 0 0; /* is in video */
 }
 
+.faq h2 {
+  margin: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px;  
+}
 
 /*---------------end of mobile styles----------*/
 
