--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,97 @@
+/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */
 
+/*
+ * What follows is the result of much research on cross-browser styling.
+ * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
+ * Kroc Camen, and the H5BP dev community and team.
+ */
+
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+
+   html {
+    color: #222;
+    font-size: 1em;
+    line-height: 1.4;
+  }
+  
+  /*
+   * Remove text-shadow in selection highlight:
+   * https://twitter.com/miketaylr/status/12228805301
+   *
+   * Vendor-prefixed and regular ::selection selectors cannot be combined:
+   * https://stackoverflow.com/a/16982510/7133471
+   *
+   * Customize the background color to match your design.
+   */
+  
+  ::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+  }
+  
+  ::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+  }
+  
+  /*
+   * A better looking default horizontal rule
+   */
+  
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+  }
+  
+  /*
+   * Remove the gap between audio, canvas, iframes,
+   * images, videos and the bottom of their containers:
+   * https://github.com/h5bp/html5-boilerplate/issues/440
+   */
+  
+  audio,
+  canvas,
+  iframe,
+  img,
+  svg,
+  video {
+    vertical-align: middle;
+  }
+  
+  /*
+   * Remove default fieldset styles.
+   */
+  
+  fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+  
+  /*
+   * Allow only vertical resizing of textareas.
+   */
+  
+  textarea {
+    resize: vertical;
+  }
+  
+  /* ==========================================================================
+     Browser Upgrade Prompt
+     ========================================================================== */
+  
+  .browserupgrade {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+  }
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -16,7 +109,7 @@ header {
   padding: 15px 0;
 }
 
-header .content-wrapper {
+header .content-wrapper { /*correct*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,30 +118,29 @@ header .content-wrapper {
  
 }
 
-header .header-divider {
+.header-divider {   /*correct*/
   width: 100%; 
   height: 1px;  
   margin: 10px 0 20px 0;  
 }
 
-header nav {
+header nav {    /*correct*/
   width: 60%;
- /* margin: 25px 0;*/
- /* padding: 20px 0 15px 0; */
+ /* margin: 25px 0;     not in solution*/    
+ /* padding: 20px 0 15px 0;   not in solution*/
  }
 
-header nav ul {
+header nav ul {    /*correct*/
   display: flex;
   justify-content: space-around;
   width: 100%;
   
 }
 
-header nav ul li {
-  width: 90%;
+header nav ul {    /*correct*/
   display: flex;
-  justify-content: center;
-  padding: 5px 10px 5px 10px;
+  justify-content: space-around;
+  width: 100%;
 }
 
 footer {   /*correct*/
@@ -58,14 +150,14 @@ footer {   /*correct*/
   text-align: center;
 
 }
-/* leave off here*/
+
 footer p {
-  margin: 0;  /* correct in solution*/
+  margin: 0;  /* correct */
 }
 
 footer .content-wrapper {
   width: 55%;
-/*  margin: 50px 0;*/
+/*  margin: 50px 0;  not in solution*/
 
 }
 
@@ -73,7 +165,7 @@ footer .contact {   /* check to make sure this is in HTML*/
   margin-bottom: 50px;
 
 }
-.contact-content h4 { 
+/*.contact-content h4 {  not in solution, at least not here
   padding: 20px 0 20px 0;
   margin: 0;
 }
@@ -81,31 +173,30 @@ footer .contact {   /* check to make sure this is in HTML*/
 .contact-content p {
   margin: 0;
   padding-bottom: 50px;
-}
+}*/
 
-.social-icons {
+footer .social-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.social-icons h4 {
+/*.social-icons h4 {     not in solution
   justify-content: center;
   margin: 0;
   padding: 20px 0 20px 0;
-}
+}*/
 
 footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 50px;  /* is this right? not in video*/
-  margin-bottom: 50px;  /* is this right? not in video*/
+  
 }
 
 footer .copyright {
-  margin: 0;
-  padding: 20px 0;
+  margin: 20px 0;
+ 
 }
 
 /* --------------------Mobile Styles - Homepage -------------*/
@@ -114,21 +205,18 @@ footer .copyright {
 .hero-area {
   display: flex;
   justify-content: center;
-  width: 90%;
-  height: 500px;
+  /*height: 500px;   not in solution so far*/
 }
 
-main .content-wrapper {
+/*main .content-wrapper { not in solution so far
   width: 95%;
-}
+}*/
 
 /* ASIDE */
 
 aside {
   display: flex;
   justify-content: center;
-  width: 90%;
-
 }
 
 /* features */
@@ -136,60 +224,56 @@ aside {
 .features {
   display: flex;
   justify-content: center;
-  width: 90%;
+  
 }
 
-.features .content-wrapper {
-  width: 90%;
-} 
- 
 .features h2 {
   margin-bottom: 60px;
 }
 
-.features .feature-items {
+.features article {  /*correct*/
+  width: 63%;
+  margin: 30px 0;
+}
+
+.features .feature-items {   /*correct*/
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
 }
 
-.features p {
+.features p {  /*correct*/
   margin: 0;
 }
 
-.features article {
-  width: 63%;
-  margin: 30px 0;
-}
-
-.features .feature-items-description {
+/*.features .feature-items-description { not in solution yet
   margin: 0;
-}
+}*/
 
 /*---- reviews ------*/
 
 .reviews {
   display: flex;
   justify-content: center;
-  width: 90%;
+  
 }
 
-.reviews .content-wrapper {
+/*.reviews .content-wrapper { not in solution
   width: 90%;
-}
+}*/
 
 .reviews h2 {
-  margin: 0;  /*==just added margin 0 to fill something in===*/
+  margin-bottom: 40px;  
 }
 
 .reviews h3 {
   width: 55%;
-
+  margin: 20px 0;
 }
 /*========ABOUT PAGE ================*/
 
-.mission {
+.mission {             /*all of about page correct*/
   display: flex;
   justify-content: center;
 }
@@ -202,7 +286,7 @@ aside {
 .contact-content p {
   margin: 0;
 }
-/*==========  FAQ page============*/
+/*==========  FAQ page========FAQ is correct in solution====*/
 
 .faq {
   display: flex;
@@ -215,12 +299,11 @@ aside {
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
-  width: 90%; /* not in video*/
-  margin: 50px 0 0 0; /* is in video */
+  margin: 50px 0 0 0; 
 }
 
 .faq h2 {
-  margin: 40px;
+  margin-bottom: 40px;
 }
 
 .faq-content {
@@ -228,4 +311,186 @@ aside {
 }
 
 /*---------------end of mobile styles----------*/
+
+
+/* ==========================================================================
+   Helper classes
+   ========================================================================== */
+
+/*
+ * Hide visually and from screen readers
+ */
+
+ .hidden {
+  display: none !important;
+}
+
+/*
+ * Hide only visually, but have it available for screen readers:
+ * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+ *
+ * 1. For long content, line feeds are not interpreted as spaces and small width
+ *    causes content to wrap 1 word per line:
+ *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+ */
+
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap;
+  /* 1 */
+}
+
+/*
+ * Extends the .visuallyhidden class to allow the element
+ * to be focusable when navigated to via the keyboard:
+ * https://www.drupal.org/node/897638
+ */
+
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
+  white-space: inherit;
+}
+
+/*
+ * Hide visually and from screen readers, but maintain layout
+ */
+
+.invisible {
+  visibility: hidden;
+}
+
+/*
+ * Clearfix: contain floats
+ *
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    `contenteditable` attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that receive the `clearfix` class.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+
+.clearfix:before,
+.clearfix:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+/* ==========================================================================
+   EXAMPLE Media Queries for Responsive Design.
+   These examples override the primary ('mobile first') styles.
+   Modify as content requires.
+   ========================================================================== */
+
+@media only screen and (min-width: 35em) {
+  /* Style adjustments for viewports that meet the condition */
+}
+
+@media print,
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
+  /* Style adjustments for high resolution devices */
+}
+
+/* ==========================================================================
+   Print styles.
+   Inlined to avoid the additional HTTP request:
+   https://www.phpied.com/delay-loading-your-print-css/
+   ========================================================================== */
+
+@media print {
+
+  *,
+  *:before,
+  *:after {
+    background: transparent !important;
+    color: #000 !important;
+    /* Black prints faster */
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
+
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
+
+  a[href]:after {
+    content: " ("attr(href) ")";
+  }
+
+  abbr[title]:after {
+    content: " ("attr(title) ")";
+  }
+
+  /*
+     * Don't show links that are fragment identifiers,
+     * or use the `javascript:` pseudo protocol
+     */
+  a[href^="#"]:after,
+  a[href^="javascript:"]:after {
+    content: "";
+  }
+
+  pre {
+    white-space: pre-wrap !important;
+  }
+
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
+
+  /*
+     * Printing Tables:
+     * http://css-discuss.incutio.com/wiki/Printing_Tables
+     */
+  thead {
+    display: table-header-group;
+  }
+
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
+
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
+}
+
+
+
+
 
