--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  background-color: #e2e3ed; /*default background color*/
 
 }
 
@@ -170,6 +171,8 @@ header {   /*this all correct  */
   display: flex;
   justify-content: center;
   padding: 15px 0;
+  background-color: #202322;
+
 }
 
 header .content-wrapper { /*correct Mobile styles*/
@@ -206,7 +209,8 @@ footer {   /*correct*/
   flex-direction: column;
   align-items: center;
   text-align: center;
-
+  background-color: #202322;
+  color: white;
 }
 
 footer p {
@@ -262,6 +266,7 @@ footer .copyright {  /*correct*/
 aside {
   display: flex;
   justify-content: center;
+  background-color: #527158;
 }
 
 /* form-description===*/
@@ -351,6 +356,8 @@ article .features-items-description {
 .reviews {    /*correct*/
   display: flex;
   justify-content: center;
+  background-color: #2a423a;
+  color: white;
   
 }
 
@@ -367,6 +374,8 @@ article .features-items-description {
 .mission {             /*all of about page correct*/
   display: flex;
   justify-content: center;
+  background-color: #527158;
+  color: white;
 }
 
 .mission h2 {
@@ -381,6 +390,8 @@ article .features-items-description {
 .contact-section {
   display: flex;
   justify-content: center;
+  background-color: #2a423a;
+  color: white;
 }
 
 
@@ -392,6 +403,8 @@ article .features-items-description {
 .faq {
   display: flex;
   justify-content: center;
+  background-color: #527158;
+  color: white;
 
 }
 
