--- a/css/main.css
+++ b/css/main.css
@@ -274,23 +274,26 @@ footer .copyright {  /*correct*/
 /* --==--Mobile Styles - Homepage ===============*/
 
 /* HERO AREA correct */
-.hero-area {
+/*.hero-area {
   display: flex;
   justify-content: center;
 }
-
-.hero-area .content-wrapper {
+*/
+.hero-area  {
   background-image: url('../img/unplugged-retreat.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-
+  min-height: 31.25em; /*make em*/
+  display: flex;
+  justify-content: center;
 }
 
-.hero-area .content-wrapper h1 {
-  font-size: 36px;
-  line-height: 43px;
-  font-weight: 500;
+.hero-area h1 {
+  font-size: 2.25em;
+  line-height: 1.2;
+  font-weight: 600;
+  color: white;
 }
 
 /* ASIDE correct mobile*/
@@ -303,13 +306,13 @@ aside {
 
 /* form-description===*/
 aside .form-description h3 {
-  font-size: 18px;
+  font-size: 1.125em;
   font-weight: 500;
 }
 
 aside .form-description p { /*mobile*/
-  font-size: 14px;
-  line-height: 18px;
+  font-size: .875em;
+  line-height: 1.125em;
 
 }
 
@@ -346,20 +349,25 @@ input[type=button] {
 /* features */
 
 .features {   /*correct*/
+  background-image: url('../img/unplugged-retreat-features.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   display: flex;
   justify-content: center;
   
 }
 
 .features h2 {    /*correct*/
-  margin-bottom: 60px;
-  font-size: 30px;
+  margin-bottom: 3.75em;
+  font-size: 1.875em;
   font-weight: 500;
+  color: white;
 }
 
 .features article {  /*correct*/
   width: 63%;
-  margin: 30px 0;
+  margin: 1.875em 0;
 }
 
  .features-items {   /*correct*/
@@ -367,6 +375,7 @@ input[type=button] {
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
+  color: white;
 }
 
 .features p {  /*correct*/
@@ -374,7 +383,7 @@ input[type=button] {
 }
 
 article .fontawesome-icons {
-  font-size: 60px; /*style sheet don't know if font-size is correct term*/
+  font-size: 3.75em; /*style sheet don't know if font-size is correct term*/
 } 
 
 article .features-items-description {
@@ -386,13 +395,21 @@ article .features-items-description {
 /*---- reviews ------*/
 
 .reviews {    /*correct*/
+  background-image: url('../img/unplugged-retreat-lacrue.jpg');
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
-  background-color: #2a423a;
   color: white;
   
 }
 
+.reviews article {
+  margin: 2em 1em;
+
+}
 .reviews h2 {    /*correct*/
   margin-bottom: 40px;  
 }
