--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,9 @@ stylesheet is that if you need to, you can override them further
 /* GLOBAL STYLES */
 
 html {
-  font-size: 16px; /*lesson 11 step 1 told to use 16px*/
+  font-size: 16px; 
+                  /*lesson 11 step 1 told to use 16px*/
+  
 }
 /*Wondering why you should write this style for the
  <body> tag and not the <p> tags? To explain: it’s a
@@ -134,7 +136,7 @@ a {
 h2 {
   font-family: 'Poppins', sans-serif; /*correct*/
   font-size: 1.875em;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 h3,
@@ -409,25 +411,31 @@ article .features-items-description {
   display: flex;
   justify-content: center;
   background-color: #527158;
-  color: white;
-}
-
-.mission h2 {
-  font-size: 1.6875em; 
-  font-weight: 500;
-}
-
-.mission-content p {
-  font-size: .875em;
+ 
 }
 
 .contact-section {
   display: flex;
   justify-content: center;
   background-color: #2a423a;
-  color: white;
+
 }
 
+.map figure {
+  width: 100%;
+  height: 0;
+  position: relative;
+  padding-bottom: 125%;
+  overflow: hidden;
+}
+
+.map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .contact-content p {
   margin: 0;
